Animation/value keyframe slider doesn't appear in dope sheet #67776

Closed
opened 2019-07-27 01:26:47 +02:00 by Samuel Santos · 11 comments

Blender Version
Broken: version: 2.80rc1

Short description of error
In Dope Sheet you can't see the changebles values of "Object Transforms" unless you go to "Shape Key Editor" and go back.
Blender Dope Sheet Problem.jpg
dope_sheet.gif

Exact steps for others to reproduce the error
1 - Open blender, change to "Animation" workspace
2 - Insert any key frame to the cube.
3- Expand the "Object Transforms" (with that little triangle). Note there's no values in the line of keyframe.
4 - Change from "Dope Sheet" to "Shape Key Editor" and go back to "Dope Sheet". Now you will see the values of the keyframes (about the transform you did).

You can't see those numbers without changing the mode.

**Blender Version** Broken: version: 2.80rc1 **Short description of error** In Dope Sheet you can't see the changebles values of "Object Transforms" unless you go to "Shape Key Editor" and go back. ![Blender Dope Sheet Problem.jpg](https://archive.blender.org/developer/F7630486/Blender_Dope_Sheet_Problem.jpg) ![dope_sheet.gif](https://archive.blender.org/developer/F8323576/dope_sheet.gif) **Exact steps for others to reproduce the error** 1 - Open blender, change to "Animation" workspace 2 - Insert any key frame to the cube. 3- Expand the "Object Transforms" (with that little triangle). Note there's no values in the line of keyframe. 4 - Change from "Dope Sheet" to "Shape Key Editor" and go back to "Dope Sheet". Now you will see the values of the keyframes (about the transform you did). You can't see those numbers without changing the mode.
Author

Added subscriber: @SamuelTelles

Added subscriber: @SamuelTelles

Added subscriber: @zeauro

Added subscriber: @zeauro

Display of these sliders is controlled by Show Sliders option under View menu.

Switching to Shape Key Editor automatically enables this option. But switching back to Dope Sheet does not automatically disable it.

I don't know if another behavior will be less or more annoying for animators.

You are not forced to go to ShapeKey Editor mode to enable sliders.
If you want to display them by default, you can. You just have to save startup.blend file with option ON.

Display of these sliders is controlled by Show Sliders option under View menu. Switching to Shape Key Editor automatically enables this option. But switching back to Dope Sheet does not automatically disable it. I don't know if another behavior will be less or more annoying for animators. You are not forced to go to ShapeKey Editor mode to enable sliders. If you want to display them by default, you can. You just have to save startup.blend file with option ON.
Member

Added subscribers: @WilliamReynish, @Hjalti, @JacquesLucke

Added subscribers: @WilliamReynish, @Hjalti, @JacquesLucke
Member

@zeauro has the right explanation. I'm also not sure what the best solution is. It feels like the actual bug is that changing the mode changes the "Show Sliders" option in the first place.
The current behavior is not too bad, but it does feel a bit buggy indeed.

@WilliamReynish, @Hjalti opinions?

@zeauro has the right explanation. I'm also not sure what the best solution is. It feels like the actual bug is that changing the mode changes the "Show Sliders" option in the first place. The current behavior is not too bad, but it does feel a bit buggy indeed. @WilliamReynish, @Hjalti opinions?
Author

I would prefer to show sliders as default. Cause it's a nice and helpful feature to stay hide. And if you hide it when switching back to "Dope Sheet" (even though you can make it appear in the menu), feels like this is a "Shape Key" funcionality.

I would prefer to show sliders as default. Cause it's a nice and helpful feature to stay hide. And if you hide it when switching back to "Dope Sheet" (even though you can make it appear in the menu), feels like this is a "Shape Key" funcionality.
Member

I just had a discussion on the topic with @hjalti.
The best solution from an animators point of view seems to be the following:

  1. Make a distinction between properties that use a slider (have a min and max) and those that don't.
  2. Have two separate "Show Sliders" options, one for each kind of property.
  3. Show the sliders for properties with min/max by default.

I'm not exactly sure how well we can detect which properties will be shown with a slider, but it should work.
Having two options might be a bit confusing, so the naming would have to make this distinction clear somehow.
Not sure what the right terminology would be for these two kinds of properties.

From a developer point of view the simplest solution would be to just do not change the setting when switching to the Shape Key Editor (why is this a mode in the first place?). It would probably be off by default.

I just had a discussion on the topic with @hjalti. The best solution from an animators point of view seems to be the following: 1. Make a distinction between properties that use a slider (have a min and max) and those that don't. 2. Have two separate "Show Sliders" options, one for each kind of property. 3. Show the sliders for properties with min/max by default. I'm not exactly sure how well we can detect which properties will be shown with a slider, but it should work. Having two options might be a bit confusing, so the naming would have to make this distinction clear somehow. Not sure what the right terminology would be for these two kinds of properties. From a developer point of view the simplest solution would be to just do not change the setting when switching to the Shape Key Editor (why is this a mode in the first place?). It would probably be off by default.
Germano Cavalcante changed title from Animation/value kryframe slider doesn't appear in dope sheet to Animation/value keyframe slider doesn't appear in dope sheet 2020-02-05 16:26:25 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I'm not familiar with this area but I believe it's a bug.

I'm not familiar with this area but I believe it's a bug.
Christoph Lendenfeld self-assigned this 2020-10-05 16:49:14 +02:00

This issue was referenced by 4a633fae8a

This issue was referenced by 4a633fae8a04a72e0e0bd1f9a5b4d9b147814d11

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67776
No description provided.